# mylogger

./: CMakeLists.txt  README.md  defer.h  main.cpp
GoogleTest/: CMakeLists.txt  context.cpp  crypt_test.cpp  decode_test.cpp  defer_test.cpp  effective_sink_test.cpp  log_handle_test.cpp  log_throughtput_test.cpp  mmap_test.cpp  proto_test.cpp  space_test.cpp  strand_executor.cpp  thread_pool.cpp  zlib_compress_test.cpp  zstd_compress_test.cpp
decode/: CMakeLists.txt  decode.cpp  decode_formatter.cpp  decode_formatter.h
example/: zstd_example.cpp
file/: defer.md  mmap.md  space.md  threadpool.md
mylogger/: CMakeLists.txt  internal_log.h  log_commom.h  log_factory.cpp  log_factory.h  log_handle.cpp  log_handle.h  log_msg.cpp  log_msg.h  log_variadic_handle.h  logger.h  space.h
mylogger/compress/: compress.h  zlib_compress.cpp  zlib_compress.h  zstd_compress.cpp  zstd_compress.h
mylogger/context/: context.cpp  context.h  executor.cpp  executor.h  thread_pool.cpp  thread_pool.h
mylogger/crypt/: AES_crypt.cpp  AES_crypt.h  crypt.cpp  crypt.h
mylogger/formatter/: default_formatter.cpp  default_formatter.h  effective_formatter.cpp  effective_formatter.h  formatter.h
mylogger/mmap/: mmap_aux.cc  mmap_aux.h  mmap_linux.cpp  mmap_win.cpp
mylogger/proto/: CMakeLists.txt  effective_msg.proto
mylogger/sinks/: console_sink.cpp  console_sink.h  effective_sink.cpp  effective_sink.h  sink.h
mylogger/utils/: file_util.cpp  file_util.h  sys_util.cpp  sys_util.h  sys_util_linux.cpp  sys_util_win.cpp  time_count.h
